--- a/style.css
+++ b/style.css
@@ -411,12 +411,102 @@ footer p {
 
 
 /* ABOUT PAGE */
- .mainAbout h1 {
-    margin-top: 400px;
+.background  {
+    width: 91.6vw;
+    height: 80vh;
+    position: relative;
+    left: 48px;
+    background-image: url("about /32822.jpeg");
+    background-repeat: no-repeat;
+    background-size: cover;
+    border-radius: 15px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+ 
+}
+.background q {
+    font-size: 1.7em;
+    position: relative;
+    bottom: 50px;
+}
+
+main h1 {
+    margin-top: 80px;
     font-size: 3em;
     text-align: center;
 }
+main img {
+    height: 400px;
+    width: 600px;
+    border-radius: 10px;
+    position: relative;
+    left: -300px;
+    width: 300px;
+    visibility: hidden;
+    opacity: 0;
+    transition: all 1.3s ease-in;
+}
+main p {
+    width: 30vw;
+    margin: 0 auto;
+    font-size: 1em;
+    text-align: justify;
+    line-height: 2em;
+    transition: all 1.5s ease-in-out;
+    opacity: 0;
+
+}
+
+.sectionOne {
+    display: flex;
+    align-items: center;
+    margin-top: 100px;
+    
+
+}
+
+.sectionTwo {
+    margin-top: 50px;
+    display: flex;
+    align-items: center;
+}
+
+.imageVisible {
+    visibility: visible;
+    opacity: 1;
+    left: 50px ;
+    height: 400px;
+    width: 600px;
+}
+.paragraphVisible {
+  opacity: 1;
+  }
+
+hr.break {
+    width: 93%;
+    margin: 0 auto;
+
+}
+.socialMedia {
+  text-align: center;
+}
+div.icons {
+    display: flex;
+    justify-content:space-around;
+    width: 20vw;
+    margin: 0 auto;
+    margin-top: 20px;
 
 
-
-
+}
+ .social {
+    width: 30px;
+    height: 30px;
+    border-radius: 5px;
+    background-color:aliceblue;
+    padding: 5px;
+}
+.footerAbout {
+    margin-top: 70px;
+}
